# simple-llama

./: .gitignore  CMakeLists.txt  README.md  chat.py  evaluation.py  export.py  generate.py  llama.cc  llama_utils.py  main.cc  main.ipynb  model.py  qllama.py  quantize.cc  quantize.h  quantize.py  requirements.txt  results.txt  run.py  run_comparison.py  visualize_rope.ipynb
include/: kernels-cpu.hpp  matview.hpp  transformer.hpp  tz-utils.hpp
lib/: .gdb_history  Makefile  llama.c  llama.h  ops.c  ops.h  quantize.c  quantize.h  test  test.c  utils.c  utils.h
lib/.cache/clangd/index/: llama.c.B1FD692EA7FBA5B4.idx  llama.h.41996E053C6F885A.idx  ops.c.8540224477E5C33C.idx  ops.h.06149D495B02FE49.idx  quantize.c.22FD4B20ABCE6DF8.idx  quantize.h.1FB95F2A4C310B0F.idx  test.c.DA1313CB180A114F.idx  utils.c.F1E6B19318ED3A2B.idx  utils.h.C1292B5EFCD8D124.idx
lib/cuda/: Makefile  cu-llama  cu-llama.cu  cu-ops.cu  cu-ops.h  main.cc
lib/cuda-new/: CMakeLists.txt  cu-llama.cu  cu-llama.h  cu-ops.cu  cu-ops.h  main.cc
